# connui-home-cellular

./: AUTHORS  Makefile.am  configure.ac
cbspatch/: Makefile.am  cbspatch.c
cppluginsrc/: Makefile.am  operator-name-cbs-cpa.c
data/: Makefile.am
debian/: changelog  connui-home-cellular.postinst  control  copyright  operator-name-cbs-widget.postinst  postinst  postrm  preinst  rules  shlibs.local
sbpluginsrc/: Makefile.am  operator-name-cbs-home-item.c
