cpalib_LTLIBRARIES = operator-name-cbs-cpa.la
cpalibdir = $(CONTROL_PANEL_LIB_DIR)

operator_name_cbs_cpa_la_SOURCES = operator-name-cbs-cpa.c
operator_name_cbs_cpa_la_CFLAGS = $(OPERATORNAMECBSCPA_CFLAGS)
operator_name_cbs_cpa_la_LDFLAGS = -module -avoid-version
operator_name_cbs_cpa_la_LIBADD = $(OPERATORNAMECBSCPA_LIBS)
