desktoplib_LTLIBRARIES =  connui-cellular-operator-home-item.la
desktoplibdir = $(HILDON_DESKTOP_LIB_DIR)

connui_cellular_operator_home_item_la_SOURCES = operator-name-cbs-home-item.c operator-name-cbs-home-item.h smsutil.c smsutil.h util.c util.h
connui_cellular_operator_home_item_la_CFLAGS = $(OPERATORNAMECBSHOMEITEM_CFLAGS)
connui_cellular_operator_home_item_la_LDFLAGS = -module -avoid-version
connui_cellular_operator_home_item_la_LIBADD = $(OPERATORNAMECBSHOMEITEM_LIBS)
